# kini

./: .gitignore  CMakeLists.txt  README.md
docs/: BinarySearchTree.mdj  IntervalTree.mdj  RangeMinimumQuery.mdj  data_structures_implemented.txt  guideline.txt
extras/: Z - Shortcut.lnk
include/: .RangeMinimumHybrid.hpp.un~  BinarySearchTree.hpp  IntervalTree.hpp  IntervalTreeCentered.hpp  Node.hpp  RangeMinimumBlock.hpp  RangeMinimumHybrid.hpp  RangeMinimumHybrid.hpp~  RangeMinimumNaive.hpp  RangeMinimumPreprocessNaive.hpp  RangeMinimumQuery.hpp  RangeMinimumQueryBlock.hpp  RangeMinimumQueryFischer.hpp  RangeMinimumQueryHybrid.hpp  RangeMinimumQueryNaive.hpp  RangeMinimumQuerySparse.hpp  RangeMinimumSparse.hpp  Tree.hpp
src/: BinarySearchTree.hpp  IntervalTreeCentered.tpp  RangeMinimumBlock.cpp  RangeMinimumBlock.tpp  RangeMinimumHybrid.cpp  RangeMinimumHybrid.tpp  RangeMinimumNaive.cpp  RangeMinimumNaive.tpp  RangeMinimumPreprocessNaive.hpp  RangeMinimumPreprocessNaive.tpp  RangeMinimumQuery.hpp  RangeMinimumQueryBlock.hpp  RangeMinimumQueryBlock.tpp  RangeMinimumQueryFischer.tpp  RangeMinimumQueryHybrid.tpp  RangeMinimumQueryNaive.hpp  RangeMinimumQueryNaive.tpp  RangeMinimumQuerySparse.tpp  RangeMinimumSparse.cpp  RangeMinimumSparse.tpp  binarysearchtree.hpp  bloomfilter.hpp  cuckoofilter.hpp  cuckoohash.hpp  eagerbinomialheap.hpp  lazybinomialheap.hpp  main.hpp  redblacktree.hpp  splaytree.hpp  suffixarray.hpp  suffixtree.hpp  trie.hpp  utility.cpp
test/: Generator.hpp
tests/: .RangeMinimumQuery.cpp.swp  IntervalTreeCenteredTest.cpp  RangeMinimumQuery.cpp  (+6 more)
(+5 files in other folders)
